--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 body {
-    font-family: sans-serif;
-    padding: 1rem;
-    margin: 0;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 1.6;
-    background: #121212;
-    color: #ededed;
+  background-image: url("background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin: 0;
+  font-family: sans-serif;
+  padding: 1rem;
+  margin: 0;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.6;
+  color: #ffffff;
 }
 
 h1, h2, h3 {
