--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ h1, h2, h3 {
 p {
     font-size: 1rem;
 }
+
+a {
+  background-color: black;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 8px;
+}
+
 a:link {
   color: #00c8c8;
 }
