--- a/assets/style.css
+++ b/assets/style.css
@@ -77,5 +77,22 @@ button:hover {
 
 .flash-link:hover {
   background-color: #5;
+  transform: scale(1.1);
+  background-color: darkorange;
 }
+
+a, button {
+  transition: all 0.15s ease;
+}
+
+a:hover, button:hover {
+  transform: scale(1.1);
+  background-color: #000000;
+}
+
+a:focus, button:focus {
+  outline: 3px solid #00c8c8;
+}
+
+
 
